--- a/sheepmanager_nginx.conf
+++ b/sheepmanager_nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name your-domain.com www.your-domain.com;
+    server_name sheep.exnihil.net;
 
     # Redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
@@ -8,11 +8,14 @@ server {
 
 server {
     listen 443 ssl;
-    server_name your-domain.com www.your-domain.com;
+    server_name sheep.exnihil.net;
 
     # SSL configuration
-    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/sheep.exnihil.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/sheep.exnihil.net/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
@@ -50,7 +53,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://unix:/run/gunicorn/sheepmanager.sock;
+        proxy_pass http://0.0.0.0:8000;
         proxy_redirect off;
         proxy_buffering off;
     }
